--- a/client/src/Components/Style/Header2.css
+++ b/client/src/Components/Style/Header2.css
@@ -57,9 +57,12 @@ background: linear-gradient(to right, #FFFFFF, #FFEFBA);
     height: 80px;
     border-bottom: 1px solid #EEE;
 }
+
+
 .searchbar{
-    width: 600px;
+    width: 40%;
     height: 35px;
+    margin-left: 20px;
     margin-top: 23px;
     border: 1px solid #cdc9c9;
     border-radius: 3px;
@@ -67,8 +70,8 @@ background: linear-gradient(to right, #FFFFFF, #FFEFBA);
 .searchbarbutton{
  /* background-color: red; */
  position: absolute;
- margin-left: 1020px;
- margin-top: -45px;
+margin-top: 13px;
+ margin-left: -50px;
  font-size: 20px;
  width: 50px;
  height: 38px;
@@ -102,12 +105,29 @@ padding-top: 5px;
     font-size: 30px;   
 
 }
+.logo h1{
+text-align: left;
+margin-left: 20px;
+font-size: 1rem;
+font-family: Helvetica, Arial, sans-serif;
+margin-top: 20px;
+transition: 0.8s;
+}
+@media screen and (min-width:1000px) {
+    .logo h1{
+        
+        font-size: 2rem;
+        font-family: Helvetica, Arial, sans-serif;
+    }
+    
+
+}
 .logo{
+    width: 100%;
     position: absolute;
-    margin-left: 200px;
-    margin-top: 25px;
-    font-size: 25px;
-    font-family: Helvetica, Arial, sans-serif
+    /* background-color: red; */
+
+    
 }
 .wishcount{
     position: absolute;
