--- a/client/src/Components/Style/Header2.css
+++ b/client/src/Components/Style/Header2.css
@@ -1,3 +1,6 @@
+body{
+    overflow-x: hidden;
+}
 .seconddiv{
     height: 40px;
     border-bottom: 1px solid #EEE;
@@ -31,21 +34,24 @@ background: linear-gradient(to right, #FFFFFF, #FFEFBA);
 }
 .seconddivp3{
     position: absolute;
-    margin-left: 1000px;
+    margin-left: 700px;
     font-size: 13px;
-    margin-top: 9px;   
+    margin-top: 9px; 
+    transition: 0.5s;      
 }
 .seconddivp4{
     position: absolute;
-    margin-left: 1100px;
+    margin-left: 800px;
     font-size: 13px;
-    margin-top: 9px;   
+    margin-top: 9px; 
+    transition: 0.5s;      
 }
 .seconddivp5{
     position: absolute;
-    margin-left: 1200px;
+    margin-left: 900px;
     font-size: 13px;
-    margin-top: 9px;   
+    margin-top: 9px; 
+    transition: 0.5s;      
 }
 .link2{
     color: black;
@@ -82,27 +88,50 @@ padding-top: 5px;
 }
 .thirddivh3{
     position: absolute;
-    margin-left: 1200px;
+    margin-left: 850px;
     margin-top: -38px;
-    font-size: 25px;    
+    font-size: 25px;  
+    transition: 0.5s;    
 }
 .thirddivh4{
     position: absolute;
-    margin-left: 1250px;
+    margin-left: 900px;
     margin-top: -38px;
-    font-size: 25px;   
+    font-size: 25px;  
+    transition: 0.5s;   
 }
 .thirddivh5{
     position: absolute;
-    margin-left: 1300px;
+    margin-left: 950px;
     margin-top: -38px;
     font-size: 25px;   
+    transition: 0.5s;  
 }
 .thirddivh6{
     position: absolute;
-    margin-left: 1350px;
+    margin-left: 1000px;
     margin-top: -43px;
-    font-size: 30px;   
+    font-size: 30px; 
+    transition: 0.5s;  
+
+}
+@media screen and (min-width:1100px) {
+    .thirddivh6{
+        margin-left: 1350px;
+       
+       
+    }
+    .thirddivh4{
+        margin-left: 1250px;
+    }
+    .thirddivh5{
+        margin-left: 1300px;
+    }
+    .thirddivh3{
+        margin-left: 1200px;
+    }
+    
+    
 
 }
 .logo h1{
@@ -113,11 +142,50 @@ font-family: Helvetica, Arial, sans-serif;
 margin-top: 20px;
 transition: 0.8s;
 }
-@media screen and (min-width:1000px) {
+.wishcount{
+    position: absolute;
+    width: 20px;
+    font-size: 13px;
+    background-color: lightgray;
+    margin-left: 915px;
+   margin-top: -40px;
+   border-radius: 5px;
+   opacity: 0.8;
+   transition: 0.5s; 
+}
+.wishcount1{
+    position: absolute;
+    width: 20px;
+    /* height: 20px; */
+    font-size: 13px;
+    background-color: lightgray;
+    margin-left: 965px;
+   margin-top: -40px;
+   border-radius: 5px;
+   opacity: 0.8;
+   transition: 0.5s; 
+}
+
+@media screen and (min-width:1100px) {
     .logo h1{
         
         font-size: 2rem;
         font-family: Helvetica, Arial, sans-serif;
+    }
+    .wishcount{
+        margin-left: 1265px;
+    }
+    .wishcount1{
+        margin-left: 1315px;
+    }
+    .seconddivp3{
+        margin-left: 1000px;
+    }
+    .seconddivp4{
+        margin-left: 1100px;
+    }
+    .seconddivp5{
+        margin-left: 1200px;
     }
     
 
@@ -129,57 +197,8 @@ transition: 0.8s;
 
     
 }
-.wishcount{
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    font-size: 13px;
-    background-color: lightgray;
-   margin-left: 1265px;
-   margin-top: -60px;
-   border-radius: 5px;
-   opacity: 0.8;
-}
-.wishcount1{
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    font-size: 13px;
-    background-color: lightgray;
-   margin-left: 1315px;
-   margin-top: -60px;
-   border-radius: 5px;
-   opacity: 0.8;
-}
-.loginhover{
-    display: none;
-    z-index: 1;
-    width: 100px;
-    height: 75px;
-    position: absolute;
-    background-color: white;
-    margin-top: 22px;
-    margin-left: -37px; 
-    border-radius: 3px;
-    border: 1px solid gray;
-    background-color: gray;
-    font-family: Helvetica, Arial, sans-serif;
-    transition: 2s;
-}
 
-.loginhoverarrow{
-    display: none;
-    z-index: 1;
-    position: absolute;
-    color: gray;
-    transition: 2s;
-}
-.thirddivh3:hover .loginhoverarrow{
-    display: block;
-}
-.thirddivh3:hover .loginhover{
-    display: block;
-}
+
 .headerL{
     color: black;
 }
