--- a/client/src/Components/Style/Home.css
+++ b/client/src/Components/Style/Home.css
@@ -29,7 +29,7 @@ width: 100%
 
 .fifthdiv{
     margin-top: 60px;
-    height: 500px;
+    height: auto;
     border-bottom: 1px solid #dcd9d9;  
 }
 .fifp{
@@ -44,202 +44,64 @@ width: 100%
     flex-direction: row;
     flex-wrap: wrap;   
     /* background-color: red; */
-    width: 900px;
-    height: 350px;
-    margin-left: 70px;
+    width: 100%;
+    height: auto;
     margin-top: 30px;
     transition: 0.3s;
 }
-.main1{
-    margin-left: 80px;
-    margin-top: 50px;
+.fifthmain li{
+    margin-left: 120px;
+    list-style: none;
 }
-.main1 h3{
+.fifthmain li h3{
     font-size: 65px;
 }
-.main1 p:hover{
+.main1 h3:hover{
     color: #e85348;
 }
-
-
-.main2{
-    margin-left: 40px;
-    margin-top: 50px;
-}
-.main2 h3{
-    font-size: 65px;
-}
-.main2 p:hover{
-    color: #e85348;
-} 
 .main2 h3:hover{
     color: #e85348;
-} 
-
-.main3{
-    margin-left: 50px;
-    margin-top: 50px;
 }
-.main3 h3{
-    font-size: 65px;
-}
-.main3 p:hover{
-    color: #e85348;
-} 
 .main3 h3:hover{
     color: #e85348;
-} 
-
-.main4{
-    margin-left: 60px;
-    margin-top: 50px;
 }
-.main4 h3{
-    font-size: 65px;
-}
-.main4 p:hover{
-    color: #e85348;
-} 
 .main4 h3:hover{
-    color: #e85348;
-} 
-
-.main5{
-    margin-left: 70px;
-    margin-top: 50px;
-}
-.main5 h3{
-    font-size: 65px;
-}
-.main5 p:hover{
     color: #e85348;
 }
 .main5 h3:hover{
     color: #e85348;
-}  
-
-.main6{
-    margin-left: 80px;
-    margin-top: 50px;
 }
-.main6 h3{
-    font-size: 65px;
-}
-.main6 p:hover{
-    color: #e85348;
-} 
 .main6 h3:hover{
     color: #e85348;
-} 
-
-.main7{
-    margin-left: 90px;
-    margin-top: 50px;
 }
-.main7 h3{
-    font-size: 65px;
-}
-.main7 p:hover{
-    color: #e85348;
-} 
 .main7 h3:hover{
-    color: #e85348;
-} 
-
-.main8{
-    margin-left: 100px;
-    margin-top: 30px;
-}
-.main8 h3{
-    font-size: 65px;
-}
-.main8 p:hover{
     color: #e85348;
 }
 .main8 h3:hover{
     color: #e85348;
-} 
-
-.main9{
-    margin-left: 40px;
-    margin-top: 30px;
-   
 }
-.main9 h3{
-    font-size: 65px;
-}
-.main9 p:hover{
-    color: #e85348;
-} 
 .main9 h3:hover{
     color: #e85348;
-} 
-
-.main10{
-    margin-left: 50px;
-    margin-top: 30px;
-   
 }
-.main10 h3{
-    font-size: 65px;
-}
-.main10 p:hover{
-    color: #e85348;
-} 
 .main10 h3:hover{
     color: #e85348;
-} 
-
-.main11{
-    margin-left: 60px;
-    margin-top: 30px;
-   
 }
-.main11 h3{
-    font-size: 65px;
-}
-.main11 p:hover{
-    color: #e85348;
-} 
 .main11 h3:hover{
     color: #e85348;
-} 
+}
 
-.main12{
-    margin-left: 70px;
-    margin-top: 30px;
-   
-}
-.main12 h3{
-    font-size: 65px;
-}
-.main12 p:hover{
-    color: #e85348;
-} 
-.main12 h3:hover{
-    color: #e85348;
-} 
 
-.main13{
-    margin-left: 80px;
-    margin-top: 30px;
-   
-}
-.main13 h3{
-    font-size: 65px;
-}
-.main13 p:hover{
-    color: #e85348;
-} 
-.main13 h3:hover{
-    color: #e85348;
-} 
+
+
+
+
 .Hlink{
     text-decoration: none;
     color: rgb(59, 58, 58);
 }
 .sixthdiv{
     height: 400px;
+    width: 100%;
     border-bottom: 1px solid #dcd9d9;
     /* background-color: red; */
     display: flex;
@@ -250,16 +112,17 @@ width: 100%
    
 }
 .vhomediv{
-    margin-left: 50px;
+    margin-left: 0px;
     margin-top: 100px;
-    width: 1100px;
+    width: 100%;
     height: 320px;
     display: flex;
     flex-direction: row;
+    /* background-color: #e85348; */
     /* flex-wrap: wrap;  */
   }
   .vhomesub{
-      width: 350px;
+      width: 100%;
       height: 310px;
       /* background-color: red; */
       margin-left: 0px;
@@ -280,32 +143,34 @@ width: 100%
       margin-left: 20px;
   }
 .vround{
-    position: absolute;
+   position: absolute;
     /* background-color: red; */
     height: 70px;
-    width: 80px;
-    font-size: 40px;
+    width: 100%;
+    font-size: 30px;
     border-radius: 50px;
-    margin-left: -200px;
-    margin-top: 200px;
-    border: 1px solid #dcd9d9;  
+   margin-left: 110px;
+    margin-top: 28px;
+    
     transition: 0.3s;
 }
 .vround:hover{
     color: rgb(244, 179, 57);
-    border: 1px solid rgb(244, 179, 57);
+   
 }
 .rh3{
     position: absolute;
-    margin-left: 430px;
+    margin-left: -10px;
     margin-top: 40px;
+    width: 100%;
     font-family: "Mrs Eaves XL Serif", serif;
     transition: 0.3s;
 }
 .rifp{
     position: absolute;
     margin-top: 60px;
-    margin-left: 470px;
+    margin-left: -15px;
+    width: 100%;
     z-index: 1;
     color: #e85348;
     transition: 0.3s;
@@ -371,17 +236,18 @@ width: 100%
   .Rbuttonsub{
       color: red;
   }
-  @media screen and (min-width:1100px) {
+  /* @media screen and (min-width:1100px) {
     .rh3{
         margin-left: 650px;
     }
     .rifp{
         margin-left: 700px;
     }
-    .vround{
-        margin-left: 250px;   
-    }
+    
     .fifthmain{
-        margin-left: 300px;   
+         
     }
+  } */
+  .sevendiv{
+    margin-top: 100px;
   }
