--- a/client/src/Components/Style/Header2.css
+++ b/client/src/Components/Style/Header2.css
@@ -166,6 +166,12 @@ transition: 0.8s;
    opacity: 0.8;
    transition: 0.5s; 
 }
+.thirddivsub{
+background-color: red;
+width: 100%;
+
+}
+
 
 @media screen and (min-width:1100px) {
     .logo h1{
