--- a/client/src/Components/Style/Home.css
+++ b/client/src/Components/Style/Home.css
@@ -124,9 +124,9 @@ width: 100%
   }
   .vhomemini{ 
     margin-top: 30px;   
-      width: 300px;
+      width: 100%;
       height: 100px;
-      margin-left: 20px;
+      margin-left: 0px;
   }
 .vround{
    position: absolute;
