--- a/client/src/Components/Style/Bed.css
+++ b/client/src/Components/Style/Bed.css
@@ -2,7 +2,7 @@
 .bfirstdiv{
     margin-top: 45px;
     border-bottom: 1px solid #e6e3e3;
-    height: 180px;
+    height: auto;
 }
 .bfirstdiv h1{
     font-family: "Mrs Eaves XL Serif", serif;
@@ -12,8 +12,7 @@
 }
 .bseconddiv{
     /* background-color: red; */
-    margin-left: 200px;
-    width: 1100px;
+    width: 100%;
     height: 100px;
     border-bottom: 1px solid  #e6e3e3;
 }
@@ -56,8 +55,8 @@
 .bthirddiv{
   /* background-color: red; */
   border-bottom: 1px solid #e6e3e3;
-  margin-left: 200px;
-  width: 1100px;
+  width: 100%;
+  justify-content: center;
   height: auto;
   display: flex;
   flex-direction: row;
