--- a/client/src/Components/Style/Footer.css
+++ b/client/src/Components/Style/Footer.css
@@ -174,6 +174,7 @@
  }
  .footersub3 h5{
     float: left;
+    font-size: 20px;
     margin-left: 250px;
     font-family: "Mr Eaves XL Modern", sans-serif;
  }
