--- a/client/src/Components/Style/Sofas.css
+++ b/client/src/Components/Style/Sofas.css
@@ -2,29 +2,33 @@
 .sfirstdiv{
     margin-top: 45px;
     border-bottom: 1px solid #e6e3e3;
-    height: 180px;
+    height: auto;
 }
 .sfirstdiv h1{
+    margin-top: -20px;
     font-family: "Mrs Eaves XL Serif", serif;
 }
 .sfirstdiv p{
+    
+    margin-left: -20px;
     font-size: 14px;
+    text-wrap: wrap;
 }
 .sseconddiv{
     /* background-color: red; */
-    margin-left: 200px;
-    width: 1100px;
+    /* margin-left: 200px; */
+    width: 100%;
     height: 100px;
     border-bottom: 1px solid  #e6e3e3;
 }
 .sseconddiv p{
     float: left;
-    margin-left: 20px;
+    margin-left: 80px;
 }
 .dropdown1{
     float: left;
     margin-top: 30px;
-    margin-left: -30px;
+    margin-left: 0px;
     width: 60px;
     height: 50px;
     color: orangered;
@@ -54,10 +58,9 @@
     background-color:  orangered;;
 }
 .sthirddiv{
-  /* background-color: red; */
   border-bottom: 1px solid #e6e3e3;
-  margin-left: 200px;
-  width: 1100px;
+  width: 100%;
+  justify-content: center;
   height: auto;
   display: flex;
   flex-direction: row;
@@ -67,7 +70,6 @@
 .sthirdsub{
     width: 350px;
     height: 450px;
-    /* background-color: red; */
    margin-top: 30px;
 }
 .sthirdsub:hover{
