--- a/client/src/Components/Style/Header2.css
+++ b/client/src/Components/Style/Header2.css
@@ -61,23 +61,41 @@ background: linear-gradient(to right, #FFFFFF, #FFEFBA);
 }
 .thirddiv{
     width: 100%;
-    height: 80px;
+    height: auto;
+    padding-left: 100px;
     border-bottom: 1px solid #EEE;
 }
 
+.thiddivsub2{
+   background-color: red;
+    transition: 0.3s;
+}
+.thiddivsub1{
+    background-color: #e85348;
+    margin-left: 0px;
+    transition: 0.3s;
+}
+.navitem1{
+    margin-top: 10px;
+    margin-left: 70px;
 
+}
 .searchbar{
-    width: 40%;
+   
+    width: 600px;
     height: 35px;
-    margin-left: 20px;
-    margin-top: 23px;
+   padding-top: 20px;
     border: 1px solid #cdc9c9;
     border-radius: 3px;
+   
+}
+.searchdiv{
+    width: 100%;
 }
 .searchbarbutton{
- /* background-color: red; */
+
  position: absolute;
-margin-top: 13px;
+margin-top: -8px;
  margin-left: -50px;
  font-size: 20px;
  width: 50px;
@@ -87,69 +105,56 @@ margin-top: 13px;
 .searchbarbutton h3{
 padding-top: 5px;
 }
-.thirddivh3{
-    position: absolute;
-    margin-left: 850px;
-    margin-top: -38px;
-    font-size: 25px;  
-    transition: 0.5s;    
+.navlink1{
+    font-size: 25px; 
+    margin-left: 20px;
+    
+    
 }
-.thirddivh4{
-    position: absolute;
-    margin-left: 900px;
-    margin-top: -38px;
-    font-size: 25px;  
-    transition: 0.5s;   
-}
-.thirddivh5{
-    position: absolute;
-    margin-left: 950px;
-    margin-top: -38px;
-    font-size: 25px;   
-    transition: 0.5s;  
-}
-.thirddivh6{
-    position: absolute;
-    margin-left: 1000px;
-    margin-top: -43px;
-    font-size: 30px; 
-    transition: 0.5s;  
 
-}
 @media screen and (min-width:1100px) {
-    .thirddivh6{
-        margin-left: 1350px;
-       
-       
-    }
-    .thirddivh4{
-        margin-left: 1250px;
-    }
-    .thirddivh5{
-        margin-left: 1300px;
-    }
-    .thirddivh3{
-        margin-left: 1200px;
+    .thiddivsub1{
+        margin-left: 800px;
     }
     
     
 
 }
+
 .logo h1{
 text-align: left;
-margin-left: 20px;
+
 font-size: 1rem;
 font-family: Helvetica, Arial, sans-serif;
-margin-top: 20px;
+
 transition: 0.8s;
+}
+.navitem2{
+    border-radius: 5px;
+    opacity: 0.8;
+    margin-left: -20px;
+    background-color: lightgray;  
+    font-size: 13px;
+    width: 20px;
+    height: 20px;
+    margin-top: 10px;
+}
+.navitem3{
+    border-radius: 5px;
+    opacity: 0.8;
+    margin-left: -20px;
+    background-color: lightgray;  
+    font-size: 13px;
+    width: 20px;
+    height: 20px;
+    margin-top: 10px;
 }
 .wishcount{
     position: absolute;
-    width: 20px;
-    font-size: 13px;
+    
+    
     background-color: lightgray;
-    margin-left: 915px;
-   margin-top: -40px;
+   
    border-radius: 5px;
    opacity: 0.8;
    transition: 0.5s; 
@@ -173,7 +178,7 @@ width: 100%;
 }
 
 
-@media screen and (min-width:1100px) {
+@media screen and (min-width:900px) {
     .logo h1{
         
         font-size: 2rem;
@@ -197,15 +202,7 @@ width: 100%;
     
 
 }
-.logo{
-    width: 100%;
-    position: absolute;
-    /* background-color: red; */
-
-    
-}
-
-
 .headerL{
     color: black;
+    text-decoration: none;
 }
