--- a/client/src/Components/Style/Home.css
+++ b/client/src/Components/Style/Home.css
@@ -223,18 +223,61 @@ width: 100%
   .Rbuttonsub{
       color: red;
   }
-  /* @media screen and (min-width:1100px) {
-    .rh3{
-        margin-left: 650px;
-    }
-    .rifp{
-        margin-left: 700px;
-    }
-    
-    .fifthmain{
-         
-    }
-  } */
+  .profile{
+    position: absolute;
+    width: 500px;
+    height: 500px;
+    background-color: white;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
+    display: flex;
+    place-items: center;
+    justify-content: center;
+    margin-left: 500px;
+    margin-top: -950px;
+    border-radius: 2px;
+    z-index: 5;
+  }
+  .closebutton{
+    position: absolute;
+   margin-top: -450px;
+   margin-left: 400px;
+  }
+  .upload{
+    position: absolute;
+    font-size: 10px;
+    margin-left: 120px;
+    margin-top: -80px;
+  }
+  .uploadbutton{
+    position: absolute;
+    font-size: 10px;
+    margin-left: 120px;
+    margin-top: -120px;
+  }
+  .logout{
+    position: absolute;
+    margin-top: 200px;
+    width: 200px;
+    height: 40px;
+    border-radius: 6px;
+    background-color:transparent;
+    border: 1px solid black;
+  }
+  .profilephoto{
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    background-color: red;
+    margin-top: -270px;
+    border-radius: 50%;
+    margin-left: 0px;
+  }
+  .profile h1{
+    position: absolute;
+  }
+  .profile h5{
+    margin-top: 80px;
+  }
   .sevendiv{
     margin-top: 100px;
   }
