--- a/client/src/Components/Style/Header2.css
+++ b/client/src/Components/Style/Header2.css
@@ -71,6 +71,13 @@ background: linear-gradient(to right, #FFFFFF, #FFEFBA);
     border-radius: 50%;
     background-color: red;
 }
+.userPic{
+    position: relative;
+    margin-top: -5px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
 .thiddivsub2{
    background-color: red;
     transition: 0.3s;
