--- a/client/src/Components/Style/Home.css
+++ b/client/src/Components/Style/Home.css
@@ -224,7 +224,7 @@ width: 100%
       color: red;
   }
   .profile{
-    position: absolute;
+    position: fixed;
     width: 500px;
     height: 500px;
     background-color: white;
@@ -271,6 +271,12 @@ width: 100%
     margin-top: -270px;
     border-radius: 50%;
     margin-left: 0px;
+  }
+  .profilepic{
+    position: relative;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
   }
   .profile h1{
     position: absolute;
