--- a/client/src/Components/Style/Home.css
+++ b/client/src/Components/Style/Home.css
@@ -242,17 +242,35 @@ width: 100%
    margin-top: -450px;
    margin-left: 400px;
   }
-  .upload{
+  .addprofilesign{
     position: absolute;
+    font-size: 30px;
+    margin-top: -110px;
+    
+  }
+  .closeupload{
+    position: absolute;
+    font-size: 13px;
+    margin-left: 10px;
+  }
+  .uploadarea{
+  
+    position: absolute;
+    z-index: 5;
+    background-color: white;
+    width: 180px;
+    height: 60px;
+    margin-top: -130px;
+  }
+  .upload{
+    margin-left: 30px;
     font-size: 10px;
-    margin-left: 120px;
-    margin-top: -80px;
+   
   }
   .uploadbutton{
-    position: absolute;
+   
     font-size: 10px;
-    margin-left: 120px;
-    margin-top: -120px;
+   
   }
   .logout{
     position: absolute;
