--- a/client/src/Components/Style/Home.css
+++ b/client/src/Components/Style/Home.css
@@ -1,3 +1,8 @@
+.maindivS{
+    /* display: none; */
+  opacity: 0.7;
+  
+}
 
 .firstfix{
     position: fixed;
@@ -233,7 +238,7 @@ width: 100%
     place-items: center;
     justify-content: center;
     margin-left: 500px;
-    margin-top: -950px;
+    margin-top: 150px;
     border-radius: 2px;
     z-index: 5;
   }
