--- a/client/src/Components/Style/Adminlogin.css
+++ b/client/src/Components/Style/Adminlogin.css
@@ -14,6 +14,11 @@
     margin-top: 100px;    
     border-radius: 5px;
    }
+   .adminuserimg{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+   }
 .adsub1 img{
 height: 500px;
 margin-left: -360px;
