--- a/client/src/Components/Style/Header2.css
+++ b/client/src/Components/Style/Header2.css
@@ -5,8 +5,11 @@ body{
     height: 40px;
     border-bottom: 1px solid #EEE;
     background: #FFEFBA;  
-background: -webkit-linear-gradient(to right, #FFFFFF, #FFEFBA); 
-background: linear-gradient(to right, #FFFFFF, #FFEFBA);   
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background: -webkit-linear-gradient(to right, #FFFFFF, #FFEFBA); 
+    background: linear-gradient(to right, #FFFFFF, #FFEFBA);   
 }
 .seconddivh3{
     position: absolute;
@@ -33,22 +36,22 @@ background: linear-gradient(to right, #FFFFFF, #FFEFBA);
     margin-top: 9px;   
 }
 .seconddivp3{
-    position: absolute;
+   
     margin-left: 1000px;
     font-size: 13px;
     margin-top: 9px; 
     transition: 0.5s;      
 }
 .seconddivp4{
-    position: absolute;
-    margin-left: 1100px;
+   
+    margin-left: 30px;
     font-size: 13px;
     margin-top: 9px; 
     transition: 0.5s;      
 }
 .seconddivp5{
-    position: absolute;
-    margin-left: 1200px;
+  
+    margin-left: 30px;
     font-size: 13px;
     margin-top: 9px; 
     transition: 0.5s;      
@@ -62,7 +65,7 @@ background: linear-gradient(to right, #FFFFFF, #FFEFBA);
 .thirddiv{
     width: 100%;
     height: auto;
-    padding-left: 100px;
+    padding-left: 80px;
     border-bottom: 1px solid #EEE;
 }
 .userP{
@@ -119,7 +122,7 @@ padding-top: 5px;
 }
 .navlink1{
     font-size: 25px; 
-    margin-left: 20px;
+    margin-left: 30px;
     
     
 }
@@ -141,16 +144,7 @@ font-family: Helvetica, Arial, sans-serif;
 
 transition: 0.8s;
 }
-.navitem2{
-    border-radius: 5px;
-    opacity: 0.8;
-    margin-left: -20px;
-    background-color: lightgray;  
-    font-size: 13px;
-    width: 20px;
-    height: 20px;
-    margin-top: 10px;
-}
+
 .navitem3{
     border-radius: 5px;
     opacity: 0.8;
